# VKDynamicRendering

./: CMakeLists.txt  Makefile  Makefile-linux  README.md  compile_commands.json  compileshader.bat  runGame.sh
models/sphere/: sphere.gltf
models/teststuff/: teststuff.gltf
shaders/: simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv  text.frag
src/: game.cpp  game.hpp  gltf_loader.cpp  gltf_loader.hpp  main.cpp  main.hpp  text_overlay.cpp  text_overlay.hpp  utils.hpp  vulkan_helper.hpp  vulkan_initializers.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp
